# System-Management

./: .env.example  .gitignore  AUTHENTICATION_README.md  Dockerfile  ERD.md  README.md  add_passwords.py  add_systems.py  add_users.py  create_admin.py  docker-compose.yml  install_deps.py  pyproject.toml  requirements.txt  system_management_overview.md  test_auth.py  test_db.py
app/: auth.py  main.py
app/db/: session.py  setup.py  test_import.py
app/db/db_models/: __init__.py  department_membership.py  posts.py  system.py  system_claims.py  user.py
app/db/models/: __init__.py  department.py  department_membership.py  organization.py  system.py  system_claims.py  system_type.py  user.py
app/static/css/: styles.css
app/templates/: activity.html  activity_content.html  admin_create_user.html  admin_create_user_content.html  dashboard.html  dashboard_content.html  index.html  index_content.html  login.html  login_.html  navbar.html  register.html  systems.html  systems_content.html
src/system_management/: __init__.py
