[project]
name = "system-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elson", email = "elsonbejleri@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "flask>=3.1.2",
    "greenlet==3.2.4",
    "jinja2>=3.1.6",
    "passlib",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "scikit-learn>=1.7.1",
    "sqlalchemy==2.0.43",
    "typing-extensions==4.14.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
